# collab_management_bot

./: .env  .gitignore  README.md  addadmin.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b7f2f6eda67e_init.py
bot/: __main__.py  aiots.py  app.py  config.py  database.py  definitions.py  logger.py  models.py  ui_commands.py  utils.py
bot/filters/: admin.py  manager.py
bot/handlers/: admin.py  manager.py  user.py
bot/keyboards/inline/: callbacks.py  project_management.py
bot/middlewares/: db.py
fh_collab_bot/: aiots.py  aiots_plus_database.py  app.py  config.py  create_database.sql  database.py  definitions.py  loader.py  logger.py  models.py  utils.py  view.py
fh_collab_bot/filters/: __init__.py  admin.py  manager.py
fh_collab_bot/handlers/: admin.py  manager.py  user.py
fh_collab_bot/handlers/default/: start.py
fh_collab_bot/handlers/user/: user.py
fh_collab_bot/keyboards/inline/: callback_data.py  project_management.py  project_management_buttons.py
